--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ esp-rtos = { version = "0.1.1", features = [
 ] }
 
 esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32"] }
-log                    = "0.4.27"
+log =  "0.4.28"
 
 embassy-net = { version = "0.7.0", features = [
   "dhcpv4",
@@ -37,7 +37,7 @@ embassy-net = { version = "0.7.0", features = [
   "udp",
 ] }
 embedded-io = "0.7.1"
-embedded-io-async = "0.7.0"
+embedded-io-async =  "0.7.0"
 esp-alloc = "0.9.0"
 esp-println = { version = "0.16.0", features = ["esp32", "log-04"] }
 # for more networking protocol support see https://crates.io/crates/edge-net
@@ -70,11 +70,13 @@ static_cell      = "2.1.1"
 embassy-sync = "0.7.2"
 esp-backtrace = { version = "0.18.0", features = ["esp32", "println", "panic-handler"]}
 heapless = "0.9.1"
-rust-mqtt= { version = "0.3.0", features = ["no_std"]}
+rust-mqtt= { version = "0.3.0", default-features = false, features = ["no_std"]}
 dht-sensor = { git = "https://github.com/michaelbeaumont/dht-sensor.git", branch = "main", features = ["async"] }
 # toml-config = "0.4.0"
 ina219 = { version = "0.2.0", features = ["async"]}
 as5600 = { version = "0.8.0" , features = ["async"]}
+embedded-hal = "=1.0.0"
+embedded-hal-async = "=1.0.0"
 
 [profile.dev]
 # Rust debug is too slow.
